feat: Upstage AI API Change

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,5 +1,6 @@
-# OpenAI API 설정
-OPENAI_API_KEY=your_openai_api_key_here
+# Upstage AI API 설정
+UPSTAGE_API_KEY=your_upstage_api_key_here
+UPSTAGE_BASE_URL=https://api.upstage.ai
 
 # CORS 설정
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
@@ -13,5 +14,9 @@ CHROMADB_PERSIST_DIRECTORY=./chroma_db
 API_PREFIX=/api
 DEBUG=true
 
-# Mock 모드 설정 (OpenAI API 할당량 부족 시 true로 설정)
+# LLM 모델 설정
+LLM_MODEL=solar-1-mini
+EMBEDDING_MODEL=solar-embedding-1-mini
+
+# Mock 모드 설정 (Upstage AI API 할당량 부족 시 true로 설정)
 USE_MOCK_MODE=false
