feat: Upstage 통합, DB/Alembic, 인덱싱 워커, 프론트 개선(중복응답/메타표시)

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,6 @@
 # Upstage AI API 설정
 UPSTAGE_API_KEY=your_upstage_api_key_here
-UPSTAGE_BASE_URL=https://api.upstage.ai
+UPSTAGE_BASE_URL=https://api.upstage.ai/v1
 
 # CORS 설정
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
@@ -15,8 +15,11 @@ API_PREFIX=/api
 DEBUG=true
 
 # LLM 모델 설정
-LLM_MODEL=solar-1-mini
-EMBEDDING_MODEL=solar-embedding-1-mini
+LLM_MODEL=solar-pro2
+EMBEDDING_MODEL=embedding-query
 
 # Mock 모드 설정 (Upstage AI API 할당량 부족 시 true로 설정)
 USE_MOCK_MODE=false
+
+# Database 설정
+DATABASE_URL=postgresql+psycopg://appuser:your_password@localhost:5432/vibedb
