--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,7 @@ numpy>=1.25.0,<2.0.0
 tiktoken>=0.5.2
 scikit-learn>=1.3.0
 chromadb>=0.4.0
+# --- DB deps ---
+SQLAlchemy>=2.0.0
+alembic>=1.13.0
+psycopg[binary]>=3.1.0
