feat: 회원정보관리, 멀티파일 업로드 및 분석 추가

--- a/backend/env.example
+++ b/backend/env.example
@@ -23,3 +23,7 @@ USE_MOCK_MODE=false
 
 # Database 설정
 DATABASE_URL=postgresql+psycopg://appuser:your_password@localhost:5432/vibedb
+
+# 인증 설정
+SECRET_KEY=your-very-long-secret-key-for-jwt-token-generation-change-this-in-production
+ACCESS_TOKEN_EXPIRE_MINUTES=30
