--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,8 +9,10 @@ langchain-community>=0.0.20
 langchain-upstage
 PyPDF2>=3.0.1
 pydantic>=2.0.0
+email-validator>=2.0.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
+bcrypt==4.0.1
 aiofiles>=23.2.1
 aiohttp>=3.9.1
 numpy>=1.25.0,<2.0.0
